# avail-orbit-raas

./: .env.example  .envrc  Cargo.toml  Dockerfile  README-ORBIT-RAAS.md  README.md  flake.nix
avail-orbit-raas-bin/: Cargo.toml  build.rs
avail-orbit-raas-bin/src/: main.rs
avail-orbit-raas-lib/: Cargo.toml
avail-orbit-raas-lib/examples/: deploy_rollup.rs  restart_rollup.rs  update_metadata.rs
avail-orbit-raas-lib/src/: config.rs  deployment.rs  jobs.rs  lib.rs  types.rs  util.rs
src/: config.rs  deployments.rs  docker.rs  error.rs  lib.rs  main.rs  tasks.rs
src/jobs/: mod.rs
src/templates/: config.ts.template  node_config.json.template  orbit_setup_config.json.template
