[workspace]
resolver = "2"
members = ["avail-orbit-raas-lib", "avail-orbit-raas-bin"]

[workspace.package]
version = "0.1.0"
description = "A Tangle Blueprint for Arbitrum Orbit RaaS using Avail DA"
edition = "2024"
authors = ["Drew Stone <drewstone329@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://tangle.tools"
repository = "https://github.com/tangle-network/avail-orbit-raas"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["tangle", "blueprint", "avs"]

[workspace.dependencies]
avail-orbit-raas-blueprint-lib = { path = "avail-orbit-raas-lib" }

blueprint-sdk = { git = "https://github.com/tangle-network/blueprint.git", default-features = false }
tokio = { version = "1.44.2", default-features = false }
color-eyre = "0.6.3"
tower = { version = "0.5.2", default-features = false }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
tower-http = { version = "0.6.2", features = ["trace"] }
axum = { version = "0.8.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
dotenvy = "0.15.7"
