[package]
name = "avail-orbit-raas-blueprint-bin"
version = "0.1.0"
description.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
avail-orbit-raas-blueprint-lib.workspace = true

blueprint-sdk = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["rt-multi-thread", "process", "macros", "fs"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenv = { workspace = true }
dotenvy = { workspace = true }

[build-dependencies]
avail-orbit-raas-blueprint-lib.workspace = true
blueprint-sdk = { workspace = true, features = ["macros", "build"] }

# TODO: Not yet supported by blueprint-manager: https://github.com/tangle-network/blueprint/issues/730
#[[package.metadata.gadget.Native.sources]]
#owner = "tangle-network"
#repo = "avail-orbit-raas"
#tag = "0.1.0"
#binaries = [
#    { arch = "Amd64", os = "Linux", name = "amd64-linux-avail-orbit-raas-gadget" },
#    { arch = "Arm64", os = "Linux", name = "arm64-linux-avail-orbit-raas-gadget" },
#]
