[package]
name = "avail-orbit-raas-blueprint-lib"
version = "0.1.0"
description.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
blueprint-sdk = { workspace = true, features = ["std", "tangle", "macros"] }
tokio = { workspace = true, features = ["sync", "process", "fs", "io-util", "macros"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
blueprint-sdk = { workspace = true, features = ["testing", "tangle"] }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
color-eyre = { workspace = true }
dotenv = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = "0.4.31"

[[example]]
name = "deploy_rollup"
path = "examples/deploy_rollup.rs"

[[example]]
name = "restart_rollup"
path = "examples/restart_rollup.rs"

[[example]]
name = "update_metadata"
path = "examples/update_metadata.rs"

[package.metadata.blueprint]
manager = { Evm = "ExperimentalBlueprint" }
master_revision = "Latest"
